@@ -1,76 +1,0 @@
-name: PublishCharms
-
-on:
-  pull_request:
-    types: [closed]
-
-jobs:
-  run-tests:
-    uses: ./.github/workflows/run-tests.yaml
-  build-charms:
-    name: "Build the charms"
-    runs-on: "ubuntu-20.04"
-    needs: [run-tests]
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-      - name: "Install charmcraft"
-        run: |
-          sudo snap install charmcraft --channel=latest/stable --classic
-      - name: "Install lxd"
-        run: |
-          sudo snap install lxd --channel=latest/stable
-          sudo snap refresh lxd
-      - name: "Configure lxd"
-        run: |
-          sudo groupadd --force --system lxd
-          sudo usermod --append --groups lxd $USER
-          newgrp lxd
-          sudo snap start lxd
-          sudo lxd waitready --timeout=30
-          sudo lxd init --auto
-      - name: "Build the charms"
-        shell: bash
-        run: |
-          make version
-          make readme
-          echo "charm version: $(cat version)"
-
-          for charm in slurmd slurmctld slurmdbd slurmrestd; do
-              cp version LICENSE icon.svg charm-${charm}/
-              sg lxd -c "charmcraft -v pack --project-dir charm-$charm"
-              cp ${charm}_ubuntu-20.04-amd64_centos-7-amd64.charm ${charm}.charm
-          done
-
-          file *.charm
-
-      - name: "Configure AWS Credentials"
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-west-2
-
-      - name: "Get current date"
-        id: vars
-        run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
-
-      - name: "Tar and push charms to s3"
-        shell: bash
-        run: |
-          tar czf charms.tar.gz slurmd.charm slurmctld.charm slurmdbd.charm slurmrestd.charm
-          aws s3 cp charms.tar.gz s3://omnivector-public-assets/charms/edge/${{ steps.vars.outputs.date }}/
-
-      - name: "Upload to edge"
-        env:
-          CHARMCRAFT_AUTH: ${{ secrets.CHARMCRAFT_AUTH }}
-        run: |
-          extension="_ubuntu-20.04-amd64_centos-7-amd64.charm"
-
-          charmcraft upload --release=edge slurmctld$extension --resource etcd:1
-          charmcraft upload $release slurmd$extension --resource nhc:1
-          
-          for charm in slurmdbd slurmrestd; do
-              charmcraft upload --release=edge "$charm$extension"
-          done
