@@ -34,17 +34,7 @@ peers:
   slurmd-peer:
     interface: slurmd-peer
 
-resources:
-  singularity-deb:
-    type: file
-    filename: singularity-ce_3.10.2-focal_amd64.deb
-    description: |
-      Official .deb package to install Singularity. Retrieved from GitHub Releases.  
-  singularity-rpm:
-    type: file
-    filename: singularity-ce-3.10.2-1.el7.x86_64.rpm
-    description: |
-      Official .rpm package to install Singularity. Retrieved from GitHub Releases.
+resources:  
   nhc:
      type: file
      filename: lbnl-nhc-1.4.3.tar.gz
